--- a/styles/main.css
+++ b/styles/main.css
@@ -1,450 +1,243 @@
-body
-{
-    background-color: #f5f5f8;
-    margin: 0px;
-}
+@import url(_footer.css);
+body {
+  background-color: #f5f5f8;
+  margin: 0px; }
 
 #features {
-    display: block;
-    background-color: #f6f6f9;
-    margin-top: 150px;
-    /*margin - pasek nawigacji od Piotra*/
-    padding: 50px;
-}
+  display: block;
+  background-color: #f6f6f9;
+  margin-top: 150px;
+  /*margin - pasek nawigacji od Piotra*/
+  padding: 50px; }
 
-.features-feature{
-    margin: 30px 30px 30px;
-    padding: 15px;
-    width: 40vw;
-}
+.features-feature {
+  margin: 30px 30px 30px;
+  padding: 15px;
+  width: 40vw; }
 
 #features-suggestion {
-    background-image: url(../images/features-suggestion.png);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100px;
-}
+  background-image: url(../images/features-suggestion.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
 
 #features-compare {
-    background-image: url(../images/features-compare.png);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100px;
-}
+  background-image: url(../images/features-compare.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
 
 #features-nav {
-    background-image: url(../images/features-nav.png);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100px;
-}
+  background-image: url(../images/features-nav.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
 
 #features-list {
-    background-image: url(../images/features-list.png);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100px;
-}
+  background-image: url(../images/features-list.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
 
 .features-title {
-    font-size: 20px;
-    margin-top: 150px;
-    text-align: center;
-}
+  font-size: 20px;
+  margin-top: 150px;
+  text-align: center; }
 
-.features-description{
-    text-align: justify;
-    padding: 30px;
-}
+.features-description {
+  text-align: justify;
+  padding: 30px; }
 
 .features-float-right {
-    float: right;
-}
+  float: right; }
+
 .features-float-left {
-    float: left;
-}
+  float: left; }
+
 .features-float-clear {
-    clear: both;
-}
-
-
+  clear: both; }
 
 .navigation-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-}
-
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1; }
 
 .navigationul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.61);
-}
-
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.61); }
 
 li {
-    float: left;
-}
+  float: left; }
 
 .navigation {
-    display: block;
-    color: white;
-    text-align: center;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    text-decoration: none;
-    transition: 1s transform 5ms;
-}
-
+  display: block;
+  color: white;
+  text-align: center;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  transition: 1s transform 5ms; }
 
 .floating-clear {
-    clear: both;
-}
+  clear: both; }
 
+li a:hover {
+  transform: scale(1.5); }
 
-
-li a:hover {  transform: scale(1.5);  }
-
-.signup {text-align: center}
+.signup {
+  text-align: center; }
 
 .inputemail {
-    width: 400px;
-    height: 40px;
-
-}
+  width: 400px;
+  height: 40px; }
 
 .myButton {
-    background-color:#44c767;
-    -moz-border-radius:28px;
-    -webkit-border-radius:28px;
-    border-radius:28px;
-    border:1px solid #18ab29;
-    display:inline-block;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial, sans-serif;
-    font-size:17px;
-    padding:13px 21px;
-    text-decoration:none;
-    text-shadow:0 1px 0 #2f6627;
-}
-.myButton:hover {
-    background-color:#5cbf2a;
-}
-.myButton:active {
-    position:relative;
-    top:1px;
-}
+  background-color: #44c767;
+  -moz-border-radius: 28px;
+  -webkit-border-radius: 28px;
+  border-radius: 28px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  font-size: 17px;
+  padding: 13px 21px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #2f6627; }
 
+.myButton:hover {
+  background-color: #5cbf2a; }
+
+.myButton:active {
+  position: relative;
+  top: 1px; }
 
 /*PATRYK*/
-#intro
-{
-
-    background-image: linear-gradient(to top,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../images/background/8.jpg);
-    /*background-image: url(../images/background/10.jpg);*/
-    background-size: cover;
-    background-position: center;
-    transition: 2s ease;
-    position: relative;
-    background-repeat: no-repeat;
-    height: 100%;
-}
+#intro {
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/background/8.jpg);
+  /*background-image: url(../images/background/10.jpg);*/
+  background-size: cover;
+  background-position: center;
+  transition: 2s ease;
+  position: relative;
+  background-repeat: no-repeat;
+  height: 100%; }
 
 /*MALY LOGOTYP SERWISU*/
-
 .logo {
-    display: block;
-    position: inherit;
-    zoom: 70%;
-    float: left;
-    padding-top: 50px;
-}
-/*NAPIS PROMUJACY*/
+  display: block;
+  position: inherit;
+  zoom: 70%;
+  float: left;
+  padding-top: 50px; }
 
+/*NAPIS PROMUJACY*/
 .slogan {
-    padding: 25% 10px 5%;
-    text-align: center;
-    font-style: italic;
-    position: relative;
-}
+  padding: 25% 10px 5%;
+  text-align: center;
+  font-style: italic;
+  position: relative; }
 
 .slogan h1 {
-    color: antiquewhite;
-    font-weight:bold;
-    font-size: 48px;
-    /*font-family: "Courier 10 Pitch";*/
-
-}
+  color: antiquewhite;
+  font-weight: bold;
+  font-size: 48px;
+  /*font-family: "Courier 10 Pitch";*/ }
 
 .slogan p {
-    margin-top: 20px;
-    font-size: 20px;
-    color: ghostwhite;
-    font-weight: lighter;
-    line-height: 31px;
+  margin-top: 20px;
+  font-size: 20px;
+  color: ghostwhite;
+  font-weight: lighter;
+  line-height: 31px; }
 
-}
 /*PATRYK*/
-
 /*Karol*/
-#be
-{
-    float: left;
-    font-size: 20px;
-    font-style: italic;
-    text-align: left;
-    margin-left: 10px;
-    color: black;
-}
-
-#contact
-{
-    float: right;
-    font-size: 20px;
-    font-style: italic;
-    text-align: left;
-    margin-right: 10px;
-    color: black;
-}
-#footer
-{
-    width:auto;
-    background-color: rgba(230, 230, 230, 0.4);
-    margin-left: auto;
-    margin-right: auto;
-    /*height: 300px;*/
-    text-align: center;
-    padding: 20px;
-    /*position: relative;*/
-    /*right: 0;*/
-    /*left: 0;*/
-    /*bottom: 0;*/
-
-}
-#socials
-{
-    float: left;
-    width: 100%;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    /*height: 125px;*/
-    padding: 10px;
-    /*border: solid 1px;*/
-    /*text-align: center;*/
-    /*position: static;*/
-
-
-}
-#yt
-{
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: auto;margin-left: 20px;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;
-
-}
-#yt:hover
-{
-    background-color: #CC181E;
-    color: white;
-    transform: rotate(360deg);
-}
-a.linksocial
-{
-    color: black;
-    text-decoration: none;
-}
-#fc
-{
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: auto;margin-left: 20px;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;}
-#fc:hover
-{
-    background-color: #3B5998;
-    color: white;
-    transform: rotate(360deg);
-}
-
-#gplus
-{
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: auto;margin-left: 20px;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;
-}
-#gplus:hover
-{
-    background-color: #dd4b39;
-    color: white;
-    transform: rotate(360deg);
-}
-#ins
-{
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: auto;margin-left: 20px;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;
-
-}
-#ins:hover
-{
-    background-color: #405de6;
-    color: white;
-    transform: rotate(360deg);}
-
-#mail
-{
-    float: right;
-    width: 145px;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    height: 125px;
-    padding: 10px;
-    /*border: solid 1px;*/
-    /*text-align: center;*/
-    /*position: static;*/
-}
-#gmail
-{
-    float: right;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: 20px;margin-left: auto;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;
-}
-#gmail:hover
-{
-    background-color: red;
-    color: white;
-    transform: rotate(360deg);
-}
-
-#credits {
-    min-height: 100px;
-    /*display: inline;*/
-    /*position: absolute;*/
-    /*right: 0;*/
-    /*left: 0;*/
-    /*bottom: 0;*/
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.55);
-    color: #fff;
-}
 #team {
-    /*background-color: rgba(0, 0, 0, 0.75);*/
-    padding: 0;
-    margin: 0;
-    color: #fff;
-    padding-top: 40px;
-}
+  /*background-color: rgba(0, 0, 0, 0.75);*/
+  padding: 0;
+  margin: 0;
+  color: #fff;
+  padding-top: 40px; }
+
 #team-section {
-     display: flex;
-     flex-wrap: wrap;
-     flex-direction: row;
-     justify-content: space-around;
- }
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around; }
 
 .team-members {
-      flex: 1;
-      padding: 20px;
-      padding-top: 40px;
-      background-color: rgba(0, 0, 0, 0.6);
-      min-width: 250px;
-      max-width: 300px;
-      text-align: justify;
-  }
+  flex: 1;
+  padding: 20px;
+  padding-top: 40px;
+  background-color: rgba(0, 0, 0, 0.6);
+  min-width: 250px;
+  max-width: 300px;
+  text-align: justify; }
 
 .team-header {
-       text-align: center;
-       margin: 20px 0 20px;
-}
+  text-align: center;
+  margin: 20px 0 20px; }
 
 .team-title {
-    text-align: center;
-    padding: 0 50px 20px;
-}
+  text-align: center;
+  padding: 0 50px 20px; }
 
 .team-name {
-    z-index: 2;
-    margin: auto;
-    text-align: center;
-    /*position:absolute;*/
-    top: 130px;
-    left: 0;
-    right:0;
-    opacity: 0.9;
-    padding-top: 10px;
- }
+  z-index: 2;
+  margin: auto;
+  text-align: center;
+  /*position:absolute;*/
+  top: 130px;
+  left: 0;
+  right: 0;
+  opacity: 0.9;
+  padding-top: 10px; }
 
 .team-foto {
-    display: block;
-    margin: auto;
-    width: 100%;
-    opacity: 0.1;
-    z-index: 1;
-    filter: grayscale(90%);
-    margin-bottom: 10px;
-}
+  display: block;
+  margin: auto;
+  width: 100%;
+  opacity: 0.1;
+  z-index: 1;
+  filter: grayscale(90%);
+  margin-bottom: 10px; }
 
 .team-foto:before {
-     /*opacity: 0.5;*/
-     /*background-color: #fff;*/
- }
+  /*opacity: 0.5;*/
+  /*background-color: #fff;*/ }
 
-.team-foto:hover{
-      opacity: 0.5;
-      transition: opacity 2.9s;
-  }
+.team-foto:hover {
+  opacity: 0.5;
+  transition: opacity 2.9s; }
 
-.team-foto:after { transition: opacity 3.9s ;
-
-}
+.team-foto:after {
+  transition: opacity 3.9s; }
 
 #subscribe {
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 60px;
-    text-align: center;
-    width: 300px;
-    height: 60px;
-    opacity: 0.5;
-    background-color: #fff76c;
-    font-size: 28px;
-    box-shadow: 0px 0px 222px white;
-    color: black;
-    font-family: 'Courgette', cursive;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 60px;
+  text-align: center;
+  width: 300px;
+  height: 60px;
+  opacity: 0.5;
+  background-color: #fff76c;
+  font-size: 28px;
+  box-shadow: 0px 0px 222px white;
+  color: black;
+  font-family: 'Courgette', cursive; }
 
-}
+#subscribe:hover {
+  opacity: 0.7;
+  text-decoration: none; }
 
-{
-
-}
-#subscribe:hover
-{
-    opacity: 0.7;
-    text-decoration: none;
-}
+/*# sourceMappingURL=main.css.map */
