--- a/styles/main.css
+++ b/styles/main.css
@@ -1,491 +1,476 @@
-body
-{
-    background-color: #f5f5f8;
-    margin: 0;
-    font-family: 'Lato', sans-serif;
-    min-width: 370px;
-}
-
+body {
+  background-color: #f5f5f8;
+  margin: 0px; }
 
 #features {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    background-color: #f6f6f6;
-    margin-top: 150px;
-    padding: 50px;
-}
+  display: block;
+  background-color: #f6f6f9;
+  margin-top: 150px;
+  /*margin - pasek nawigacji od Piotra*/
+  padding: 50px; }
 
 .features-feature {
-    margin: 30px 30px 30px;
-    padding: 5px;
-    width: 40%;
-    border-bottom: inset;
-}
-
-.features-feature:hover {
-    background-color: #ebebeb;
-}
-
-.features-line-break {
-    width: 100%
-}
+  margin: 30px 30px 30px;
+  padding: 15px;
+  width: 40vw; }
 
 #features-suggestion {
-    background-image: url(../images/features-suggestion.png);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100px;
-    padding-top: 10px;
-}
+  background-image: url(../images/features-suggestion.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
 
 #features-compare {
-    background-image: url(../images/features-compare.png);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100px;
-}
+  background-image: url(../images/features-compare.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
 
 #features-nav {
-    background-image: url(../images/features-nav.png);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100px;
-}
+  background-image: url(../images/features-nav.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
 
 #features-list {
-    background-image: url(../images/features-list.png);
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100px;
-}
+  background-image: url(../images/features-list.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
 
 .features-title {
-    margin-top: 150px;
-    text-align: center;
-    font-size: 1.8em;
-    font-weight: 700;
-}
+  font-size: 20px;
+  margin-top: 150px;
+  text-align: center; }
 
-.features-description{
-    text-align: center;
-    padding: 30px 10px 30px;
-    font-size: 1.5em;
-}
+.features-description {
+  text-align: justify;
+  padding: 30px; }
+
+.features-float-right {
+  float: right; }
+
+.features-float-left {
+  float: left; }
+
+.features-float-clear {
+  clear: both; }
 
 .navigation-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-}
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1; }
 
-.navigation-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgba(139,133,135,0.5);
-}
-
+.navigationul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.61); }
 
 li {
-    float: left;
-}
+  float: left; }
 
 .navigation {
-    display: block;
-    color: white;
-    text-align: center;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    text-decoration: none;
-    transition: 1s transform 5ms;
-    font-size: 1.2em; /* dodalam*/
-}
-
+  display: block;
+  color: white;
+  text-align: center;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  transition: 1s transform 5ms; }
 
 .floating-clear {
-    clear: both;
-}
+  clear: both; }
 
-
-
-li a:hover {  transform: scale(1.5);  }
+li a:hover {
+  transform: scale(1.5); }
 
 .signup {
-    text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    margin: auto;
-    background-color: #ffffff;
-}
+  text-align: center; }
 
+.inputemail {
+  width: 400px;
+  height: 40px; }
 
-.singup-title {
-    /*margin-left: -180px;*/ /* dodalam*/
-    font-size: 2em;   /* dodalam*/
-}
+.button-for-form-subskribe {
+  background-color: #44c767;
+  -moz-border-radius: 28px;
+  -webkit-border-radius: 28px;
+  border-radius: 28px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  font-size: 17px;
+  padding: 13px 21px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #2f6627; }
 
-.input-email {
-    width: 400px;
-    height: 40px;
+.button-for-form-subskribe:hover {
+  background-color: #5cbf2a; }
 
-}
-
-.my-button {
-    background-color: #3e528b;
-    -moz-border-radius:28px;
-    -webkit-border-radius:28px;
-    border-radius:28px;
-    border:1px solid #61848b;
-    display:inline-block;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial, sans-serif;
-    font-size:17px;
-    padding:13px 21px;
-    text-decoration:none;
-    text-shadow:0 1px 0 #2f6627;
-}
-.my-button:hover {
-    background-color: #a469bf;
-}
-.myButton:active {
-    position:relative;
-    top:1px;
-}
-
+.button-for-form-subskribe:active {
+  position: relative;
+  top: 1px; }
 
 /*PATRYK*/
-#intro
-{
-
-    background-image: linear-gradient(to top,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../images/background/8.jpg);
-    /*background-image: url(../images/background/10.jpg);*/
-    background-size: cover;
-    background-position: center;
-    transition: 2s ease;
-    position: relative;
-    background-repeat: no-repeat;
-    height: 100%;
-}
+#intro {
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/background/8.jpg);
+  /*background-image: url(../images/background/10.jpg);*/
+  background-size: cover;
+  background-position: center;
+  transition: 2s ease;
+  position: relative;
+  background-repeat: no-repeat;
+  height: 100%; }
 
 /*MALY LOGOTYP SERWISU*/
-
 .logo {
-    display: block;
-    position: inherit;
-    zoom: 70%;
-    float: left;
-    padding-top: 50px;
-}
-/*NAPIS PROMUJACY*/
+  display: block;
+  position: inherit;
+  zoom: 70%;
+  float: left;
+  padding-top: 50px; }
 
+/*NAPIS PROMUJACY*/
 .slogan {
-    padding: 25% 10px 5%;
-    text-align: center;
-    font-style: italic; /*czy jest ok?*/
-    position: relative;
-}
+  padding: 25% 10px 5%;
+  text-align: center;
+  font-style: italic;
+  position: relative; }
 
 .slogan h1 {
-    color: antiquewhite;
-    font-weight:bold;
-    font-size: 48px;
-    /*font-family: "Courier 10 Pitch";*/
-
-}
+  color: antiquewhite;
+  font-weight: bold;
+  font-size: 48px;
+  /*font-family: "Courier 10 Pitch";*/ }
 
 .slogan p {
-    margin-top: 20px;
-    font-size: 20px;
-    color: ghostwhite;
-    font-weight: lighter;
-    line-height: 31px;
+  margin-top: 20px;
+  font-size: 20px;
+  color: ghostwhite;
+  font-weight: lighter;
+  line-height: 31px; }
 
-}
 /*PATRYK*/
-
 /*Karol*/
-#be
-{
-    float: left;
-    font-size: 20px;
-    /*font-style: italic;*/ /*dodalam*/
-    text-align: left;
-    margin-left: 10px;
-    color: black;
-}
-
-#contact
-{
-    float: right;
-    font-size: 20px;
-    /*font-style: italic; !*dodalam*!*/
-    text-align: left;
-    margin-right: 10px;
-    color: black;
-}
-#footer
-{
-    width:auto;
-    background-color: rgba(230, 230, 230, 0.4);
-    margin-left: auto;
-    margin-right: auto;
-    /*height: 300px;*/
-    text-align: center;
-    padding: 20px;
-    /*position: relative;*/
-    /*right: 0;*/
-    /*left: 0;*/
-    /*bottom: 0;*/
-    font-family: 'Lato', sans-serif; /*dodalam*/
-    font-style: normal; /*dodalam*/
-}
-#socials
-{
-    float: left;
-    width: 100%;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    /*height: 125px;*/
-    padding: 10px;
-    /*border: solid 1px;*/
-    /*text-align: center;*/
-    /*position: static;*/
-
-
-}
-#yt
-{
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: auto;margin-left: 20px;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;
-
-}
-#yt:hover
-{
-    background-color: #CC181E;
-    color: white;
-    transform: rotate(360deg);
-}
-a.linksocial
-{
-    color: black;
-    text-decoration: none;
-}
-#fc
-{
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: auto;margin-left: 20px;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;}
-#fc:hover
-{
-    background-color: #3B5998;
-    color: white;
-    transform: rotate(360deg);
-}
-
-#gplus
-{
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: auto;margin-left: 20px;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;
-}
-#gplus:hover
-{
-    background-color: #dd4b39;
-    color: white;
-    transform: rotate(360deg);
-}
-#ins
-{
-    float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: auto;margin-left: 20px;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;
-
-}
-#ins:hover
-{
-    background-color: #405de6;
-    color: white;
-    transform: rotate(360deg);}
-
-#mail
-{
-    float: right;
-    width: 145px;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    height: 125px;
-    padding: 10px;
-    /*border: solid 1px;*/
-    /*text-align: center;*/
-    /*position: static;*/
-}
-#gmail
-{
-    float: right;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    /*border: solid 1px black;*/
-    margin-right: 20px;margin-left: auto;
-    transition:background-color 1500ms,  color 1500ms, transform 1500ms;
-}
-#gmail:hover
-{
-    background-color: red;
-    color: white;
-    transform: rotate(360deg);
-}
-
-#credits {
-    min-height: 100px;
-    /*display: inline;*/
-    /*position: absolute;*/
-    /*right: 0;*/
-    /*left: 0;*/
-    /*bottom: 0;*/
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.55);
-    color: #fff;
-}
-
 #team {
-    margin: 0;
-    padding-top: 40px;
-    /*background-color: rgba(180, 180, 180, 0.25);*/
-    background-color: #f6f6f6;
-}
-
-.team-header {
-    text-align: center;
-    margin: 30px 0 20px;
-    color: rgba(0, 0, 0, 0.89);
-    font-size: 1.5em;
-}
-
-.team-title {
-    text-align: center;
-    padding: 0 20px 40px;
-    font-size: 1.1em;
-}
+  /*background-color: rgba(0, 0, 0, 0.75);*/
+  padding: 0;
+  margin: 0;
+  color: #fff;
+  padding-top: 40px; }
 
 #team-section {
-    /*background-color: rgba(180, 180, 180, 0.25);*/
-    background-color: #f6f6f6;
-}
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around; }
 
 .team-members {
-    box-sizing: border-box;
-    float: left;
-    max-width: 800px;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    padding-top: 40px;
-    text-align: center;
-    margin: 0 0 2% 0;
-    border-top: 1px outset #dfdfe2;
-}
+  flex: 1;
+  padding: 20px;
+  padding-top: 40px;
+  background-color: rgba(0, 0, 0, 0.6);
+  min-width: 250px;
+  max-width: 300px;
+  text-align: justify; }
 
-div.team-members:first-child {
-    border-top: hidden;
-}
+.team-header {
+  text-align: center;
+  margin: 20px 0 20px; }
 
-.team-members img {
-    max-width: 200px;
-    width: 100%;
-    border-radius: 50%;
-}
-
-.team-photo {
-    opacity: 0.8;
-    filter: grayscale(90%);
-    margin-bottom: 10px;
-}
+.team-title {
+  text-align: center;
+  padding: 0 50px 20px; }
 
 .team-name {
-    margin: auto;
-    text-align: center;
-    padding: 20px;
-}
+  z-index: 2;
+  margin: auto;
+  text-align: center;
+  /*position:absolute;*/
+  top: 130px;
+  left: 0;
+  right: 0;
+  opacity: 0.9;
+  padding-top: 10px; }
 
-.team-description {
-    color: rgba(0, 0, 0, 0.89);
-    max-width: 300px;
-    width: 100%;
-    text-align: justify;
-    margin: auto;
-    font-size: 1em;
-}
+.team-foto {
+  display: block;
+  margin: auto;
+  width: 100%;
+  opacity: 0.1;
+  z-index: 1;
+  filter: grayscale(90%);
+  margin-bottom: 10px; }
 
-.team-photo:hover {
-    opacity: 1;
-    transition: opacity 0.9s;
-}
+.team-foto:before {
+  /*opacity: 0.5;*/
+  /*background-color: #fff;*/ }
 
-.team-clear {
-    clear: both;
-}
+.team-foto:hover {
+  opacity: 0.5;
+  transition: opacity 2.9s; }
 
-@media screen and (min-width:800px) {
-    .team-members {
-        width: 23%;
-        margin: 0 1% 0 1%;
-        border-top: hidden;
-        border-left: 1px outset #dfdfe2;
-    }
-
-    .team-clear {
-        clear: both;
-    }
-
-    div.team-members:first-child {
-        border-left: hidden;
-    }
-}
+.team-foto:after {
+  transition: opacity 3.9s; }
 
 #subscribe {
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 60px;
-    text-align: center;
-    width: 300px;
-    height: 60px;
-    opacity: 0.5;
-    background-color: #fff76c;
-    font-size: 28px;
-    box-shadow: 0px 0px 222px white;
-    color: black;
-    /*font-family: 'Courgette', cursive;*/
-    font-family: 'Lato', sans-serif; /*dodalam*/
-    font-style: normal; /*dodalam*/
-}
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 60px;
+  text-align: center;
+  width: 300px;
+  height: 60px;
+  opacity: 0.5;
+  background-color: #fff76c;
+  font-size: 28px;
+  box-shadow: 0px 0px 222px white;
+  color: black;
+  font-family: 'Courgette', cursive; }
 
-#subscribe:hover
-{
-    opacity: 0.7;
-    text-decoration: none;
-}
+#subscribe:hover {
+  opacity: 0.7;
+  text-decoration: none; }
+
+a.linksocial {
+  color: black;
+  text-decoration: none; }
+
+#yt {
+  float: left;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  margin-right: auto;
+  margin-left: 20px;
+  transition: background-color 1500ms,  color 1500ms, transform 1500ms; }
+
+#fc {
+  float: left;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  margin-right: auto;
+  margin-left: 20px;
+  transition: background-color 1500ms,  color 1500ms, transform 1500ms; }
+
+#gplus {
+  float: left;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  margin-right: auto;
+  margin-left: 20px;
+  transition: background-color 1500ms,  color 1500ms, transform 1500ms; }
+
+#ins {
+  float: left;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  margin-right: auto;
+  margin-left: 20px;
+  transition: background-color 1500ms,  color 1500ms, transform 1500ms; }
+
+#gmail {
+  float: left;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  margin-right: auto;
+  margin-left: 20px;
+  transition: background-color 1500ms,  color 1500ms, transform 1500ms; }
+
+#yt:hover {
+  color: white;
+  transform: rotate(360deg);
+  background-color: #CC181E; }
+
+#fc:hover {
+  color: white;
+  transform: rotate(360deg);
+  background-color: #3B5998; }
+
+#gplus:hover {
+  color: white;
+  transform: rotate(360deg);
+  background-color: #dd4b39; }
+
+#ins:hover {
+  color: white;
+  transform: rotate(360deg);
+  background-color: #405de6; }
+
+#gmail:hover {
+  color: white;
+  transform: rotate(360deg);
+  background-color: red; }
+
+#be {
+  font-size: 20px;
+  font-style: italic;
+  text-align: left;
+  color: black;
+  float: left;
+  margin-left: 10px; }
+
+#contact {
+  font-size: 20px;
+  font-style: italic;
+  text-align: left;
+  color: black;
+  float: right;
+  margin-right: 10px; }
+
+#footer, #socials {
+  padding: 20px; }
+
+#credits {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.55);
+  color: #fff; }
+
+body {
+  min-width: 370px; }
+
+#features {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  background-color: #f6f6f6;
+  margin-top: 150px;
+  padding: 50px; }
+
+.features-feature {
+  margin: 30px 30px 30px;
+  padding: 5px;
+  width: 40%;
+  border-bottom: inset; }
+
+/*podswietlanie feature*/
+.features-feature:hover {
+  background-color: #ebebeb; }
+
+.features-line-break {
+  width: 100%; }
+
+#features-suggestion {
+  background-image: url(../images/features-suggestion.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
+
+#features-compare {
+  background-image: url(../images/features-compare.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
+
+#features-nav {
+  background-image: url(../images/features-nav.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
+
+#features-list {
+  background-image: url(../images/features-list.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: 100px; }
+
+.features-title {
+  margin-top: 150px;
+  text-align: center;
+  font-size: 1.8em;
+  font-weight: 700; }
+
+.features-description {
+  text-align: center;
+  padding: 30px 10px 30px;
+  font-size: 1.5em; }
+
+#team {
+  margin: 0;
+  padding-top: 40px;
+  background-color: #f6f6f6; }
+
+.team-header {
+  text-align: center;
+  margin: 20px 0 20px;
+  color: rgba(6, 6, 6, 0.92);
+  font-size: 1.5em; }
+
+.team-title {
+  text-align: center;
+  padding: 0 20px 40px;
+  font-size: 1.1em; }
+
+#team-section {
+  background-color: #f6f6f6; }
+
+.team-members {
+  box-sizing: border-box;
+  float: left;
+  max-width: 800px;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  padding-top: 40px;
+  text-align: center;
+  margin: 0 0 2% 0;
+  border-top: 1px outset #dfdfe2; }
+
+div.team-members:first-child {
+  border-top: hidden; }
+
+.team-members img {
+  max-width: 300px;
+  width: 100%;
+  border-radius: 50%; }
+
+.team-photo {
+  opacity: 0.5;
+  filter: grayscale(90%);
+  margin-bottom: 10px; }
+
+.team-name {
+  margin: auto;
+  text-align: center;
+  padding: 20px; }
+
+.team-description {
+  color: rgba(6, 6, 6, 0.92);
+  max-width: 300px;
+  width: 100%;
+  text-align: justify;
+  margin: auto;
+  font-size: 1em; }
+
+.team-photo:hover {
+  opacity: 1;
+  transition: opacity 0.9s; }
+
+.team-clear {
+  clear: both; }
+
+@media screen and (min-width: 800px) {
+  .team-members {
+    width: 23%;
+    margin: 0 1% 0 1%;
+    border-bottom: hidden;
+    border-left: inset #dfdfe2; }
+
+  .team-clear {
+    clear: both; }
+
+  div.team-members:first-child {
+    border-left: hidden; } }
+
+/*# sourceMappingURL=main.css.map */
