--- a/styles/main.scss
+++ b/styles/main.scss
@@ -120,7 +120,7 @@ li a:hover {  transform: scale(1.5);  }
 
 }
 
-.myButton {
+.button-for-form-subskribe {
     background-color:#44c767;
     -moz-border-radius:28px;
     -webkit-border-radius:28px;
@@ -135,10 +135,10 @@ li a:hover {  transform: scale(1.5);  }
     text-decoration:none;
     text-shadow:0 1px 0 #2f6627;
 }
-.myButton:hover {
+.button-for-form-subskribe:hover {
     background-color:#5cbf2a;
 }
-.myButton:active {
+.button-for-form-subskribe:active {
     position:relative;
     top:1px;
 }
