--- a/styles/main.css
+++ b/styles/main.css
@@ -165,7 +165,6 @@ li a:hover {  transform: scale(1.5);  }
 {
 
     background-image: linear-gradient(to top,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../images/background/8.jpg);
-    /*background-image: url(../images/background/10.jpg);*/
     background-size: cover;
     background-position: center;
     transition: 2s ease;
@@ -188,7 +187,7 @@ li a:hover {  transform: scale(1.5);  }
 .slogan {
     padding: 25% 10px 5%;
     text-align: center;
-    font-style: italic; /*czy jest ok?*/
+    font-style: italic;
     position: relative;
 }
 
@@ -196,7 +195,6 @@ li a:hover {  transform: scale(1.5);  }
     color: antiquewhite;
     font-weight:bold;
     font-size: 48px;
-    /*font-family: "Courier 10 Pitch";*/
 
 }
 
