--- a/styles/main.css
+++ b/styles/main.css
@@ -159,9 +159,8 @@ li a:hover {  transform: scale(1.5);  }
     top:1px;
 }
 
-#intro
-{
-    background-image: linear-gradient(to top,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../images/background/8.jpg);
+#intro {
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/background/8.jpg);
     background-size: cover;
     background-position: center;
     transition: 2s ease;
@@ -198,7 +197,6 @@ li a:hover {  transform: scale(1.5);  }
     color: ghostwhite;
     font-weight: lighter;
     line-height: 31px;
-
 }
 
 /*Karol*/
