--- a/styles/main.scss
+++ b/styles/main.scss
@@ -69,7 +69,7 @@ li a:hover {  transform: scale(1.5);  }
 
 }
 
-.my-button {
+.button-for-form-subskribe {
     background-color: #3e528b;
     -moz-border-radius:28px;
     -webkit-border-radius:28px;
@@ -84,10 +84,10 @@ li a:hover {  transform: scale(1.5);  }
     text-decoration:none;
     text-shadow:0 1px 0 #2f6627;
 }
-.my-button:hover {
+.button-for-form-subskribe:hover {
     background-color: #a469bf;
 }
-.my-button:active {
+.button-for-form-subskribe:active {
     position:relative;
     top:1px;
 }
