--- a/styles/_features-team.scss
+++ b/styles/_features-team.scss
@@ -4,20 +4,25 @@ $font-stack: 'Lato', sans-serif;
 $feature-background-color: #f6f6f6;
 $team-background-color: #f6f6f6;
 
-
 #features {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     background-color: $feature-background-color;
-    margin-top: 150px;
+    margin-top: 110px;
     padding: 50px;
 }
 
 .features-feature {
-    margin: 30px 30px 30px;
-    padding: 5px;
-    width: 40%;
+    box-sizing: border-box;
+    float: left;
+    max-width: 800px;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    padding-top: 40px;
+    text-align: center;
+    margin: 0 0 2% 0;
     border-bottom: inset;
 }
 
@@ -30,7 +35,7 @@ $team-background-color: #f6f6f6;
 }
 
 @mixin feature-photo-settings {
-    background-position: center top;
+    background-position: center 20px;
     background-repeat: no-repeat;
     background-size: 100px;
     padding-top: 10px;
@@ -67,6 +72,10 @@ $team-background-color: #f6f6f6;
     text-align: center;
     padding: 30px 10px 30px;
     font-size: $font-size - 0.8em;
+}
+
+div.features-feature:last-child {
+    border-bottom: hidden;
 }
 
 #team {
@@ -149,6 +158,22 @@ div.team-members:first-child {
 }
 
 @media screen and (min-width:800px) {
+    .features-feature {
+        box-sizing: border-box;
+        float: left;
+        max-width: 800px;
+        width: 47%;
+        height: 380px;
+        padding: 20px;
+        padding-top: 40px;
+        text-align: center;
+        border-bottom: inset;
+    }
+
+    .features-feature-clear {
+        clear: both;
+    }
+    
     .team-members {
         width: 23%;
         margin: 0 1% 0 1%;
