--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -77,7 +77,7 @@ li a:hover {  transform: scale(1.5);  }
   text-shadow:0 1px 0 #2f6627;
 }
 .button-for-form-subskribe:hover {
-  background-color: #a469bf;
+    opacity: 0.8;
 }
 .button-for-form-subskribe:active {
   position:relative;
