--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -72,6 +72,7 @@ li a:hover {  transform: scale(1.5);  }
   color:#ffffff;
   font-family: 'Lato', sans-serif; /*dodalam*/
   font-size:17px;
+  margin-left: 25px;
   padding:13px 21px;
   text-decoration:none;
   text-shadow:0 1px 0 #2f6627;
