--- a/styles/main.scss
+++ b/styles/main.scss
@@ -78,7 +78,7 @@ body
 //}
 
 
-@import "slideshow";
+@import "slideshow.scss";
 @import "_footer.scss";
 @import "_features-team.scss";
 @import "_navigation.scss";
